# scli

./: .gitignore  README.md  pyproject.toml  test_cobol_parser.py  test_data_parsing.py
scripts/: cobol_processor.py  consumer_debt_checker.py  csv_viewer.py  file_counter.py  hello_world.py  network_tools.py  system_info.py
src/scli/: config_loader.py  logger.py  main.py  menu_utils.py  output_manager.py  script_loader.py
test_cobol_files/: customer.cpy  customer_data.txt  product.cpy  product_data.txt
