[project]
name = "scli"
version = "0.1.0"
description = "A CLI tool for executing selectable scripts"
authors = [{name = "bypabloc", email = "bypabloc@example.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "inquirer>=3.2.0",
    "textual>=0.47.0",
    "pandas>=2.0.0",
    "questionary>=2.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.scripts]
scli = "scli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
